@@ -137,14 +137,20 @@
     <DirectoryRef Id="VendorDir38">
       <?if $(var.HaveLdapLibs38) = 1 ?>
       <Component Id="Vendor38" Guid="681a48cd-be38-11ea-84eb-04ea56793316" Win64="$(var.Win64)">
-        <File Id="authenticationldapsaslclient38" Name="authentication_ldap_sasl_client.dll"
-         Source="$(var.BDist38)\mysql\vendor\authentication_ldap_sasl_client.dll" DiskId="1"/>
         <File Id="libsasl38" Name="libsasl.dll"
          Source="$(var.BDist38)\mysql\vendor\libsasl.dll" DiskId="1"/>
         <File Id="libcrypto_1_138" Name="libcrypto-1_1-x64.dll"
          Source="$(var.BDist38)\mysql\vendor\libcrypto-1_1-x64.dll" DiskId="1"/>
         <File Id="saslSCRAM38" Name="saslSCRAM.dll"
          Source="$(var.BDist38)\mysql\vendor\saslSCRAM.dll" DiskId="1"/>
+      </Component>
+      <?endif?>
+    </DirectoryRef>
+    <DirectoryRef Id="VendorPluginDir38">
+      <?if $(var.HaveLdapLibs38) = 1 ?>
+      <Component Id="VendorPlugin38" Guid="52bec466-d076-4da3-86d6-8ed0a84fc360" Win64="$(var.Win64)">
+        <File Id="authentication_ldap_sasl_client38" Name="authentication_ldap_sasl_client.dll"
+         Source="$(var.BDist38)\mysql\vendor\plugin\authentication_ldap_sasl_client.dll" DiskId="1"/>
       </Component>
       <?endif?>
     </DirectoryRef>
