@@ -137,14 +137,20 @@
     <DirectoryRef Id="VendorDir39">
       <?if $(var.HaveLdapLibs39) = 1 ?>
       <Component Id="Vendor39" Guid="ba33e641-5337-4e26-9db5-4c8084b48b3f" Win64="$(var.Win64)">
-        <File Id="authenticationldapsaslclient39" Name="authentication_ldap_sasl_client.dll"
-         Source="$(var.BDist39)\mysql\vendor\authentication_ldap_sasl_client.dll" DiskId="1"/>
         <File Id="libsasl39" Name="libsasl.dll"
          Source="$(var.BDist39)\mysql\vendor\libsasl.dll" DiskId="1"/>
         <File Id="libcrypto_1_139" Name="libcrypto-1_1-x64.dll"
          Source="$(var.BDist39)\mysql\vendor\libcrypto-1_1-x64.dll" DiskId="1"/>
         <File Id="saslSCRAM39" Name="saslSCRAM.dll"
          Source="$(var.BDist39)\mysql\vendor\saslSCRAM.dll" DiskId="1"/>
+      </Component>
+      <?endif?>
+    </DirectoryRef>
+    <DirectoryRef Id="VendorPluginDir39">
+      <?if $(var.HaveLdapLibs39) = 1 ?>
+      <Component Id="VendorPlugin39" Guid="ca2723f9-d058-4091-a8cb-53107f14f306" Win64="$(var.Win64)">
+        <File Id="authenticationldapsaslclient39" Name="authentication_ldap_sasl_client.dll"
+         Source="$(var.BDist39)\mysql\vendor\plugin\authentication_ldap_sasl_client.dll" DiskId="1"/>
       </Component>
       <?endif?>
     </DirectoryRef>
